# imessage-spellbook

./: imessage.py  pyproject.toml  sendMessage.applescript  test.json
