[tool.poetry]
name = "puffle"
version = "0.1.0"
description = ""
authors = ["Varun Shenoy <varun.nshenoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
py-iMessage = "^1.7"
imessage-reader = "^0.4.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
